05/31/2025 [spice2x]
    IIDX: tape LED over API
    UI tweaks
    Option to make command line args take precedence

05/09/2025 [spice2x]
    Check for window focus when processing input (-inputfocus)
    More options for IIDX/SDVX windowed subscreen
    SpiceCompanion screen mirroring quality options
    Various LovePlus improvements and fixes:
        Allow camera access
        Full screen mode
        Add printer options
        Add stub for printer DLL (cpusbxpkm.dll)
    Logging improvements for better troubleshooting

04/25/2025 [spice2x]
    LargeAddressAware variant of spice.exe for Metal Gear
    Save new JSON config files to %appdata%/spice2x
    Various bug fixes

04/08/2025 [spice2x]
    Ensure rawinput touch is default for all games (-wintouch to override)
    Various overlay UI fixes and improvements, update ImGui library
    Add missing lights in Museca

03/29/2025 [spice2x]
    Add SDVX landscape mode, -forceresswap option
    Fix bugs in image scaler
    Configurator UI tweaks

03/25/2025 [spice2x]
    Add Mahjong Fight Girl support
    Add option for custom full screen resolution (-forceres)

03/24/2025 [spice2x]
    Auto PIN entry
    Multiple scenes for image resize
    API: add resize function, lights.read can now filter lights by name
    Fix DLL hooks not receiving command-line arguments

03/16/2025 [spice2x]
    Fix clipboard copy function truncating last character of string

03/03/2025 [spice2x]
    IIDX: add workaround for REVERB EX filter missing in Windows 11 update

02/25/2025 [spice2x]
    Add -vsyncbuffer option for forcing double/triple buffering

02/22/2025 [spice2x]
    Add -windowscale option for resizing DX9 backbuffer dimensions

01/26/2025 [spice2x]
    Expanded main menu in overlay (default bind: esc key)
    Nostalgia: touch and swipe gestures (-nostpoke)
    Jubeat: detect root directory boot failure
    Add "Any Direction" analog type for button binding

01/16/2025 [spice2x]
    More MIDI improvements: