@@ -1,7 +1,9 @@
 05/31/2025 [spice2x]
+    IIDX: fix windowed subscreen not accepting mouse clicks when
+        overlay is active
     IIDX: tape LED over API
-    UI tweaks
     Option to make command line args take precedence
+    UI tweaks
 
 05/09/2025 [spice2x]
     Check for window focus when processing input (-inputfocus)
